# GeoQuiz

./: .gitignore  Cargo.toml  README.md  TODOs.md  build.rs  manifest.yaml  map_maker.py
examples/: prepare.rs
sources/: maps.py  outlines.py  util.py  wiki_names.json
src/: info_parse.rs  lib.rs  logic.rs  main.rs
ui/: app-window.slint  look-up-screen.slint  screen-choice-play.slint  screen-help.slint  screen-look-up.slint  screen-main-play.slint  screen-score.slint  screen-select-choice-play.slint  screen-select-main-play.slint  screen-select-play.slint  structs.slint  styling.slint  widgets.slint
