[package]
name = "geo_quiz"
version = "0.1.0"
edition = "2024"
authors = ["Guilhem <guilhem.mathieux.pro@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "geo_quiz"

[[bin]]
path = "src/main.rs"
name = "geo_quiz"

[dependencies]
slint = { version = "1.11.0", default-features = false, features = [ "compat-1-2", "backend-winit", "renderer-femtovg", "backend-android-activity-06"] }
# slint = { path = "../slint/api/rs/slint", default-features = false, features = [ "compat-1-2", "backend-winit", "renderer-femtovg", "backend-android-activity-06"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
webbrowser = "1.0.4"
# open = "5.3.2"




[dev-dependencies]
csv = "1.2"
num-format = "0.4.4"

[build-dependencies]
# slint-build = { path = "../slint/api/rs/build"}
slint-build = "1.10.0" 
